--- a/package.json
+++ b/package.json
@@ -3,18 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "eslint-plugin-eslint-plugin": "^2.3.0",
-    "eslint-plugin-import": "^2.22.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.4.1",
-    "tailwindcss": "^1.4.6"
+    "tailwindcss": "^1.9.6"
   },
   "scripts": {
     "build:tailwind": "tailwindcss build src/tailwind.css -o src/tailwind.generated.css",
@@ -41,10 +37,6 @@
     ]
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.11.0",
-    "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-react": "^7.21.4"
+    "babel-core": "^6.26.3"
   }
 }
