--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-select": "^3.2.0",
     "react-transition-group": "^4.4.1",
     "tailwindcss": "^1.9.6"
   },
